# api/openapi.yaml
@@ -56,6 +56,8 @@ paths:
                 $ref: '#/components/schemas/CocktailList'
         '400':
           $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
     post:
       tags: [local]
       summary: Ajouter un cocktail et son image
@@ -137,8 +139,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Cocktail'
+        '400':
+          $ref: '#/components/responses/BadRequest'
         '404':
           $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
   /ingredients:
     get:
       tags: [referentials]
@@ -490,6 +496,12 @@ components:
             $ref: '#/components/schemas/Error'
     NotFound:
       description: Ressource introuvable.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+    InternalServerError:
+      description: Erreur interne du serveur.
       content:
         application/json:
           schema:
